# ncnn

./: CMakeLists.txt  Jenkinsfile
benchmark/: CMakeLists.txt
examples/: CMakeLists.txt
src/: CMakeLists.txt  layer.h  net.cpp  net.h
src/layer/: innerproduct.cpp  innerproduct.h  input.h
src/layer/arm/: innerproduct_arm.cpp
tools/: CMakeLists.txt
tools/caffe/: caffe2ncnn.cpp
